--- a/dbutil/docker-compose.yml
+++ b/dbutil/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   testdb:
-    image: 'mysql:5.7'
+    image: mariadb:10.5.8
     command: --init-file /srv/sql/init.sql
     volumes:
       - ./:/srv/sql/
